--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/cb-icon.png">
-  <title>ClimBox - Dashboard</title>
+  <title>Noabox - Dashboard</title>
 </head>
 <body>
   <div id="app"></div>
