--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/cb-icon.png">
   <title>
-    ClimBox - Profile
+    Noabox - Profile
   </title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,900" />
   <link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
@@ -43,7 +43,7 @@
       <a class="navbar-brand px-4 py-3 m-0" href=" ../pages/dashboard.html ">
         <img src="../assets/img/cb-icon.png" class="navbar-brand-img" width="26" height="26" alt="main_logo">
         <span class="ms-1 text-sm fw-bold">
-          <span style="color: rgb(0, 0, 0);">Clim</span><span style="color: #00A8E8;">Box</span>
+          <span style="color: rgb(0, 0, 0);">Noa</span><span style="color: #00A8E8;">Box</span>
         </span>
       </a>
     </div>
@@ -149,7 +149,7 @@
                 <h5 class="mb-1 text-primary">Pengguna [Belum Terdaftar]</h5>
               </a>
               <p class="mb-0 font-weight-normal text-sm">
-                Climbox Antusias
+                Noabox Antusias
               </p>
             </div>
             <button class="button button1" onclick="signOutAndRedirect()">Sign out</button>
@@ -238,7 +238,7 @@
               document.write(new Date().getFullYear())
             </script>,
             made with <i class="fa fa-heart"></i> by
-            <a href=" " class="font-weight-bold" target="_blank">ClimBox</a>
+            <a href=" " class="font-weight-bold" target="_blank">Noabox</a>
             for a better climate.
           </div>
         </div>
